# playlist-video-maker

./: .gitignore  README.md  build_windows_zip.ps1  launch_playlist_video_maker.command  pyproject.toml
.github/workflows/: build-windows-zip.yml
docs/: architecture.md  windows-zip-build.md
src/playlist_video_maker/: __main__.py  app.py  main.py  models.py  runtime_paths.py
src/playlist_video_maker/services/: binaries.py  workflow.py
src/playlist_video_maker/ui/: main_window.py
