[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-video-maker"
version = "0.1.0"
description = "PySide6 desktop app for building playlist-based MP4 videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=11.0.0",
  "PySide6>=6.8",
]

[project.scripts]
playlist-video-maker = "playlist_video_maker.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
